# paranoia-mcp

./: .gitignore  README.md  pyproject.toml
src/paranoia/: payload.py  server.py
tests/: conftest.py  test_payload.py  test_server.py
