[project]
name = "paranoia-mcp"
version = "0.1.0"
description = "Adversarial code review via ChatGPT, exposed as an MCP server."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "openai>=1.50.0",
    "tiktoken>=0.7.0",
]

[project.scripts]
paranoia = "paranoia.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paranoia"]
